@@ -21,7 +21,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -68,9 +67,9 @@ public class SecurityConfiguration {
         configuration.setAllowedOriginPatterns(Arrays.asList("*"));
         configuration.setAllowedMethods(Arrays.asList("GET","POST","PATCH","DELETE","OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "content-type", "x-auth-token", "Refresh"));
-        configuration.setExposedHeaders(Arrays.asList("x-auth-token"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setExposedHeaders(Arrays.asList("Refresh"));
+        configuration.setExposedHeaders(Arrays.asList("x-auth-token","Authorization","Refresh"));
+//        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+//        configuration.setExposedHeaders(Arrays.asList("Refresh"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**",configuration);
